--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyA-IT8MzVfrafnl2ih7MvpDQqgxz7MV5_g",
+  authDomain: "teste-ordem.firebaseapp.com",
+  projectId: "teste-ordem",
+  storageBucket: "teste-ordem.appspot.com",
+  messagingSenderId: "732451435749",
+  appId: "1:732451435749:web:cb68dcf139fab231e5900c"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
